# datofiel

./: .env  app.py  main.py  pyproject.toml  requirements.txt  test_datos.csv
modules/: comunas.py  deduplicacion.py  direcciones.py  rut.py
utils/: supabase_client.py
