[project]
name = "rut-cleaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "phonenumbers>=9.0.28",
    "plotly>=6.7.0",
    "rapidfuzz>=3.14.5",
    "streamlit>=1.56.0",
    "supabase>=2.28.3",
]
